[gd_scene load_steps=10 format=2]

[ext_resource path="res://Art Assets/fonts/Thirteen-Pixel-Fonts.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Characters/WorkerMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Art Assets/UI Assets/Guide/scene0.png" type="Texture" id=3]
[ext_resource path="res://HomeScreen.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 100
outline_size = 4
outline_color = Color( 0.580392, 0.392157, 0.235294, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=5]

[node name="HomeScreen" type="Node2D"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 800, 600 )
texture = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 500.0
theme = SubResource( 2 )

[node name="HBoxContainer" type="VBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -200.0
margin_right = 1100.0
margin_bottom = 1200.0
alignment = 1

[node name="Label" type="Label" parent="Control/HBoxContainer"]
margin_top = 500.0
margin_right = 1600.0
margin_bottom = 632.0
theme = SubResource( 4 )
text = "PAINT MIX MADNESS"
align = 1

[node name="GUIDE" type="Button" parent="Control/HBoxContainer"]
margin_top = 636.0
margin_right = 1600.0
margin_bottom = 721.0
text = "GUIDE"

[node name="PLAY" type="Button" parent="Control/HBoxContainer"]
margin_top = 725.0
margin_right = 1600.0
margin_bottom = 810.0
text = "PLAY"

[node name="CREDITS" type="Button" parent="Control/HBoxContainer"]
margin_top = 814.0
margin_right = 1600.0
margin_bottom = 899.0
text = "CREDITS"

[node name="FakeWorker" parent="." instance=ExtResource( 2 )]
position = Vector2( 350, 1008 )
scale = Vector2( 10, 10 )
script = null

[node name="AnimationTree" parent="FakeWorker" index="4"]
parameters/playback = SubResource( 5 )

[connection signal="pressed" from="Control/HBoxContainer/GUIDE" to="." method="_on_GUIDE_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/PLAY" to="." method="_on_PLAY_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/CREDITS" to="." method="_on_CREDITS_pressed"]

[editable path="FakeWorker"]
